# computer_graphics-raytracing

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Object.cpp  Object.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Vector.cpp  Vector.h  helpers.h  raytracer.cpp
additional_files/: math.cpp  math.h  vector.h
default_files/: parser.h
